--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -27,11 +27,8 @@ ol {
   margin-left: 0;
 }
 body{
-  background-color: #0076be;
-}
-body{
+  background-color: #ffffff;
   margin-top: 70px;
-  margin-bottom: 40px;
 }
 .inline{
   display: inline;
@@ -52,12 +49,15 @@ body{
  }
 
  .informationCardsEvents{
-   padding-top: 1em;
-   padding-bottom: 1em;
-   font-size: 14px;
+   font-size: 15px;
    background-color:#f2ae42;
    color: black;
-   font-weight: lighter;
+   font-weight: 500;
+   height: 5em;
+   padding: 0.5em 0 0.8em 0.5em !important;
+   display: flex;
+  flex-direction: column;
+  align-content: center;
  }
  .imgEvent{
    width: 100%;
@@ -67,6 +67,7 @@ body{
     width: 100%;
     background-color: #fff;
     cursor: pointer;
+    box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.27), 0 6px 20px 0 rgba(0, 0, 0, 0.208)
 }
 .imgEvent:hover{
   background-color: rgba(0,0,0,0.8);
@@ -74,6 +75,12 @@ body{
 }
 #carEvent{
   margin: 0.4em!important;
+}
+a:hover{
+  text-decoration: none;
+}
+.modal-body{
+  font-size: 15px;
 }
 @media (min-width: 385px) and (max-width:  574px) {
   #carEvent{
