--- a/src/views/events.pug
+++ b/src/views/events.pug
@@ -9,123 +9,176 @@ block container
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
-                        img.imgEvent(src="./src/public/images/events/Arduino-Day.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
+                        img.imgEvent(src="./images/events/Arduino-Day.jpg", alt="img1", data-toggle="modal", data-target="#arduino")
+                    .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
+                        span Arduino Day 2018
+                        span Sabado 7 de abril - ( 9am a 17:00 )
+            .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
+                .row.no-gutters
+                    .col-12.col-sm-12.col-md-12.col-lg-12
+                        img.imgEvent(src="./images/events/lora-iota.jpg", alt="img1", data-toggle="modal", data-target="#iota-lora")
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
-                        br
-                        span Dom 25/Feb/18 - 4pm
-                        br
+                        span Jueves 22 de marzo (19:00 a 21:00)
                         span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
-                        img.imgEvent(src="./src/public/images/events/Raspberry.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
+                        img.imgEvent(src="./images/events/Herramientas-Marketing.jpg", alt="img1", data-toggle="modal", data-target="#herramientas-marketing")
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
-                        br
                         span Dom 25/Feb/18 - 4pm
-                        br
                         span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
-                        img.imgEvent(src="./src/public/images/events/Impresion-3D.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
+                        img.imgEvent(src="./images/events/space-up.jpg", alt="img1", data-toggle="modal", data-target="#space-up")
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
-                        br
                         span Dom 25/Feb/18 - 4pm
-                        br
                         span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
-                        img.imgEvent(src="./src/public/images/events/SUP-weekend.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
+                        img.imgEvent(src="./images/events/conegp.jpg", alt="img1", data-toggle="modal", data-target="#conegp")
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
-                        br
                         span Dom 25/Feb/18 - 4pm
-                        br
                         span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
-                        img.imgEvent(src="./src/public/images/events/Constructora-exito.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
+                        img.imgEvent(src="./images/events/maraton-innovatec.jpg", alt="img1", data-toggle="modal", data-target="#maraton-innovatec")
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
-                        br
                         span Dom 25/Feb/18 - 4pm
-                        br
-                        span Aforo: 10
-            .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
-                .row.no-gutters
-                    .col-12.col-sm-12.col-md-12.col-lg-12
-                        img.imgEvent(src="./src/public/images/events/IV-encuentro-Investigacion.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
-                    .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
-                        span Itil Foundation - Preparación
-                        br
-                        span Dom 25/Feb/18 - 4pm
-                        br
                         span Aforo: 10
         .row.justify-content-sm-center
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
-                        img.imgEvent(src="./src/public/images/events/Arduino-Day.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
+                        img.imgEvent(src="./images/events/curso-electricidad-industrial.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
-                        br
                         span Dom 25/Feb/18 - 4pm
-                        br
                         span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
-                        img.imgEvent(src="./src/public/images/events/Raspberry.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
+                        img.imgEvent(src="./images/events/iot.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
-                        br
                         span Dom 25/Feb/18 - 4pm
-                        br
                         span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
-                        img.imgEvent(src="./src/public/images/events/Impresion-3D.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
+                        img.imgEvent(src="./images/events/taller-marketing.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
-                        br
                         span Dom 25/Feb/18 - 4pm
-                        br
                         span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
-                        img.imgEvent(src="./src/public/images/events/SUP-weekend.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
+                        img.imgEvent(src="./images/events/ideas-estudios-mercado.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
-                        br
                         span Dom 25/Feb/18 - 4pm
-                        br
                         span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
-                        img.imgEvent(src="./src/public/images/events/Constructora-exito.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
+                        img.imgEvent(src="./images/events/Constructora-exito.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
-                        br
                         span Dom 25/Feb/18 - 4pm
-                        br
                         span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
-                        img.imgEvent(src="./src/public/images/events/IV-encuentro-Investigacion.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
+                        img.imgEvent(src="./images/events/IV-encuentro-Investigacion.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
-                        br
                         span Dom 25/Feb/18 - 4pm
-                        br
                         span Aforo: 10
 
-        
+    .modal.fade(id="arduino", tabindex="-1", role="dialog", aria-labelledby="exampleModalLabel", aria-hidden="true")
+      .modal-dialog(role="document")
+        .modal-content
+            .modal-header
+                h5.modal-title(id="exampleModalLabel") Arduino Day 2018
+                button.close(type="button",data-dismiss="modal", aria-label="Close")
+                span(aria-hidden="true") &times;
+            .modal-body
+                .container-fluid
+                    .row
+                        .col-12
+                            img.img-fluid(src="./images/events/Arduino-Day.jpg", alt="img1")
+                    .row
+                        i.material-icons#iconBlack event
+                        p#informationEvent Sab 07/Abril/18 - 
+                    .row
+                        i.material-icons#iconBlack watch_later
+                        p#informationEvent ( 9am-17:00 )
+                    .row
+                        i.material-icons#iconBlack attach_money
+                        p#informationEvent Gratis
+                    .row
+                        i.material-icons#iconBlack pin_drop
+                        p#informationEvent Auditorio Rosa Alarco Larrabure - UNMSM
+                    .row
+                        .col-12
+                            ol 
+                                li.text-justify Este 22 de marzo se realizará la conferencia “LORA e IOTA: tecnologías abiertas para el              desarrollo de Smart Cities e Industria 4.0” gracias al Núcleo de Investigación e Innovación Tecnológica (NIIT)    de   Internet de las Cosas de la Universidad Nacional Mayor de San Marcos. 
+                                li El grupo está dirigido por el profesor Jorge Guerra.
+                                li Inscripciones ➡ https://goo.gl/CWbi3V
+                                li Ingreso gratuito, capacidad limitada.
+                                li Programa de actividades : 
+                                    a(href="https://www.facebook.com/events/1529278423849405/") https://www.facebook.com/events/1529278423849405/
+                    .row
+                        .col-12
+                        #map.text-center
+            .modal-footer
+                button.btn.btn-secondary(type="button",data-dismiss="modal") Close
+
+    .modal.fade(id="iota-lora", tabindex="-1", role="dialog", aria-labelledby="exampleModalLabel", aria-hidden="true")
+        .modal-dialog(role="document")
+            .modal-content
+                .modal-header
+                    h5.modal-title(id="exampleModalLabel") Arduino Day 2018
+                    button.close(type="button",data-dismiss="modal", aria-label="Close")
+                    span(aria-hidden="true") &times;
+                .modal-body
+                    .container-fluid
+                        .row
+                            .col-12
+                                img.img-fluid(src="./images/events/Arduino-Day.jpg", alt="img1")
+                        .row
+                            i.material-icons#iconBlack event
+                            p#informationEvent Sab 07/Abril/18 - 
+                        .row
+                            i.material-icons#iconBlack watch_later
+                            p#informationEvent ( 9am-17:00 )
+                        .row
+                            i.material-icons#iconBlack attach_money
+                            p#informationEvent Gratis
+                        .row
+                            i.material-icons#iconBlack pin_drop
+                            p#informationEvent Auditorio Rosa Alarco Larrabure - UNMSM
+                        .row
+                            .col-12
+                                ol 
+                                    li.text-justify Este 22 de marzo se realizará la conferencia “LORA e IOTA: tecnologías abiertas para el              desarrollo de Smart Cities e Industria 4.0” gracias al Núcleo de Investigación e Innovación Tecnológica (NIIT)    de   Internet de las Cosas de la Universidad Nacional Mayor de San Marcos. 
+                                    li El grupo está dirigido por el profesor Jorge Guerra.
+                                    li Inscripciones ➡ https://goo.gl/CWbi3V
+                                    li Ingreso gratuito, capacidad limitada.
+                                    li Programa de actividades : 
+                                        a(href="https://www.facebook.com/events/1529278423849405/") https://www.facebook.com/events/1529278423849405/
+                        .row
+                            .col-12
+                            #map.text-center
+                .modal-footer
+                    button.btn.btn-secondary(type="button",data-dismiss="modal") Close
+
+            
