--- a/src/views/layouts/header.pug
+++ b/src/views/layouts/header.pug
@@ -9,12 +9,12 @@ html(lang="en")
     //- styles
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css", integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm", crossorigin="anonymous")
     link(href="https://fonts.googleapis.com/css?family=Boogaloo", rel="stylesheet")
-    link(rel="stylesheet", href="./src/public/css/main.css")
-    link(rel="stylesheet", href="./src/public/css/header.css")
-    link(rel="stylesheet", href="./src/public/css/menu-options.css")
-    link(rel="stylesheet", href="./src/public/css/carousel.css")
-    link(rel="stylesheet", href="./src/public/css/article-home.css")
-    link(rel="stylesheet", href="./src/public/css/footer.css")
+    link(rel="stylesheet", href="css/main.css")
+    link(rel="stylesheet", href="css/header.css")
+    link(rel="stylesheet", href="css/menu-options.css")
+    link(rel="stylesheet", href="css/carousel.css")
+    link(rel="stylesheet", href="css/article-home.css")
+    link(rel="stylesheet", href="css/footer.css")
 
     //- fonts
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
@@ -23,42 +23,9 @@ html(lang="en")
     title Inicio
   body
 
-
-    .modal.fade(id="exampleModal", tabindex="-1", role="dialog", aria-labelledby="exampleModalLabel", aria-hidden="true")
-      .modal-dialog(role="document")
-        .modal-content
-          .modal-header
-            h5.modal-title(id="exampleModalLabel") Robótica e Internet de las Cosas
-            button.close(type="button",data-dismiss="modal", aria-label="Close")
-              span(aria-hidden="true") &times;
-          .modal-body
-            .container-fluid
-              .row
-                .col-12
-                  img.img-fluid(src="./src/public/images/events/Arduino-Day.jpg", alt="img1")
-                .col-12
-                  p.text-justify Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere a temporibus sapiente, obcaecati qui vel omnis dicta quaerat voluptatibus, dolor, distinctio tempora consectetur soluta. Numquam asperiores vel sint modi pariatur.
-              .row
-                i.material-icons#iconBlack event
-                p#informationEvent Sabado 23 de Febrero
-              .row
-                i.material-icons#iconBlack watch_later
-                p#informationEvent 9:00 am
-              .row
-                i.material-icons#iconBlack attach_money
-                p#informationEvent Gratis
-              .row
-                i.material-icons#iconBlack pin_drop
-                p#informationEvent Lima - Chorillos Municipalidad
-              .row
-                .col-12
-                  #map.text-center
-          .modal-footer
-            button.btn.btn-secondary(type="button",data-dismiss="modal") Close
-
     header.fixed-top
       a(href="index.html")
-        img(src="./src/public/images/koala.png", alt="koala").logoWolap
+        img(src="images/koala.png", alt="koala").logoWolap
       a(href="index.html")
         h1.logo WOLAPP
       ul
@@ -80,7 +47,7 @@ html(lang="en")
 
     
 
-    footer.fixed-bottom.row
+    footer.row
       span.mx-auto Todos los derechos reservados FindUs
     
     
@@ -88,6 +55,6 @@ html(lang="en")
     script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js", integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN", crossorigin="anonymous")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js", integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q", crossorigin="anonymous")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js", integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl", crossorigin="anonymous")
-    script(src="./src/public/js/app.js")
+    script(src="js/app.js")
     script(async, defer, src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7OZ6lHBNCgOSu6pa8nJ3Jf2zR0-t_ilM&callback=initMap")
     
