--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -1,7 +1,7 @@
 header {
   width: 100%;
   height: 60px;
-  background-color: #175f96;
+  background-color: #0881ba;
   padding: 0 10px;
   padding-right: 0;
   margin-right: 0;
@@ -31,16 +31,19 @@ header {
   .search {
     display: inline;
     margin-top: 10px;
-    width: 100px;
+    width: 170px;
     transition: all .5s;
     right: 55px;
   }
   .search:focus {
-    width: 150px;
+    width: 190;
   }
 }
 
 /* logo */
+h3{
+  color: #175f96 !important;
+}
 h1, h3 {
   margin-left: 0;
   margin-top: 10px;
@@ -49,7 +52,7 @@ h1, h3 {
 }
 h1:hover {
   text-decoration:none; 
-  color: #ffffff;
+  color: #abb0b8;
 }
 .material-icons{
   color: white;
@@ -84,11 +87,26 @@ header > div{
   max-height: auto;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 920px) {
   header > ul{
     display: none;
   }
   body{
-    margin-top: 100px;
+    margin-top: 110px;
+  }
+}
+@media only screen and (min-width: 575px) {
+  h3{
+    padding-left: 1.5em;
+  }
+}
+@media only screen and (min-width: 990px) {
+  h3{
+    padding-left: 3.5em;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  h3{
+    padding-left: 5em;
   }
 }
