--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -67,11 +67,15 @@ body{
     width: 100%;
     background-color: #fff;
     cursor: pointer;
-    box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.27), 0 6px 20px 0 rgba(0, 0, 0, 0.208)
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.no-gutters:hover{
+  -webkit-transform: scale(1.01);
+    transform: scale(1.01)
 }
 .imgEvent:hover{
-  background-color: rgba(0,0,0,0.8);
-  filter:brightness(0.6);
+  background-color: rgba(0, 0, 0, 0);
+  filter:brightness(0.98);
 }
 #carEvent{
   margin: 0.4em!important;
