--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -14,11 +14,13 @@ block container
 
           .carousel-inner
             .carousel-item.active
-              img.d-block.w-100(src="./src/public/images/events/SUP-weekend.jpg", alt="First slide")
+              img.d-block.w-100(src="./src/public/images/events/design-thinking.jpg", alt="First slide")
+              .carousel-caption.d-none.d-md-block
+                h3 hola mundo
             .carousel-item
-              img.d-block.w-100(src="./src/public/images/events/Raspberry.jpg", alt="Second slide")
+              img.d-block.w-100(src="./src/public/images/events/taller-marketing.jpg", alt="Second slide")
             .carousel-item
-              img.d-block.w-100(src="./src/public/images/events/Impresion-3D.jpg", alt="Third slide")
+              img.d-block.w-100(src="./src/public/images/events/lora-iota.jpg", alt="Third slide")
           
           a.carousel-control-prev(href="#carouselExampleIndicators", role="button", data-slide="prev")
             span.carousel-control-prev-icon(aria-hidden="true")
@@ -31,16 +33,8 @@ block container
         .row
           img.img-article(src="./src/public/images/events/Arduino-Day.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
         .row
-          img.img-article(src="./src/public/images/events/Constructora-exito.jpg", alt="img1")
+          img.img-article(src="./src/public/images/events/conegp.jpg", alt="img1")
         .row
-          img.img-article(src="./src/public/images/events/IV-encuentro-Investigacion.jpg", alt="img1")
-      //- .col-12.col-sm-6.col-md-3
-      //-   .row
-      //-     img.img-article(src="./src/public/images/events/Arduino-Day.jpg", alt="img1")
-      //-   .row
-      //-     img.img-article(src="./src/public/images/events/Constructora-exito.jpg", alt="img1")
-      //-   .row
-      //-     img.img-article(src="./src/public/images/events/IV-encuentro-Investigacion.jpg", alt="img1")
-
+          img.img-article(src="./src/public/images/events/ideas-estudios-mercado.jpg", alt="img1")
   
       
