--- a/src/views/layouts/header.pug
+++ b/src/views/layouts/header.pug
@@ -24,9 +24,9 @@ html(lang="en")
   body
 
     header.fixed-top
-      a(href="index.html")
+      a(href="../../../index.html")
         img(src="images/koala.png", alt="koala").logoWolap
-      a(href="index.html")
+      a(href="../../../index.htmlindex.html")
         h1.logo WOLAPP
       ul
         a.menu-option(href="events.html") Eventos
