--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -2,7 +2,7 @@ header {
   width: 100%;
   height: 60px;
   background-color: #0881ba;
-  padding: 0 10px;
+  padding: 0 4px;
   padding-right: 0;
   margin-right: 0;
   display: flex;
@@ -12,14 +12,14 @@ header {
 }
 
 .search {
-  width: 85px;
+  width: 80px;
   height: 32px;
-  padding: 0 6px;
+  padding: 0 4px;
   margin: 10px auto;
   display: inline;
   border: 1px solid #999;
   border-radius: 3px;
-  font-size: 14px;
+  font-size: 13px;
   right: 6em;
   top: 5px;
 }
@@ -31,12 +31,12 @@ header {
   .search {
     display: inline;
     margin-top: 10px;
-    width: 170px;
+    width: 100px;
     transition: all .5s;
     right: 55px;
   }
   .search:focus {
-    width: 190;
+    width: 180px;
   }
 }
 
@@ -83,7 +83,7 @@ header > div{
 }
 .logoWolap{
   position: relative;
-  width: 4.5em;
+  width: 3.5em;
   max-height: auto;
 }
 
@@ -108,5 +108,10 @@ header > div{
 @media only screen and (min-width: 1200px) {
   h3{
     padding-left: 5em;
+  }
+}
+@media only screen and (max-width: 333px) {
+  h1{
+    font-size: 35px;
   }
 }
