--- a/src/public/css/menu-options.css
+++ b/src/public/css/menu-options.css
@@ -11,8 +11,8 @@
   padding: 3px 0;
   text-align: center;
   display: block;
-  font-size: 20px;
-  font-weight: 40100;
+  font-size: 17px;
+  font-weight: 400;
   color: rgb(255, 255, 255);
 }
 .menu-option:hover {
@@ -47,4 +47,77 @@
   .menu-option {
     color: rgb(255, 255, 255);
 }
+}
+@media only screen and (max-width: 300px) {
+  .menu-option {
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    font-weight: 400; 
+  } 
+  h1{
+    font-size: 25px;
+    width: 3em;
+  }
+  .material-icons {
+    color: white;
+    margin-left: 0em;
+    margin-right: 0.2em;
+    margin-top: 7px;
+    font-size: 1.7em!important;
+  }
+  .search {
+    width: 50px;
+    height: 22px;
+    padding: 0 2px;
+    margin: 10px auto;
+    display: inline;
+    border: 1px solid #999;
+    border-radius: 3px;
+    font-size: 10px;
+    right: 4em;
+    top: 5px;
+  }
+  header {
+    width: 100%;
+    height: 45px;
+    background-color: #0881ba;
+    padding: 0 3px;
+    padding-right: 0;
+    margin-right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    top: 0;
+}
+.menu-options {
+  margin-top: 44px;
+  margin-bottom: 0;
+  display: flex;
+  justify-content: space-around;
+  padding: 5px 0;
+  background-color: #a2a8ac;
+ }
+  body {
+    margin-top: 80px;
+  }
+  h3{
+    font-size: 20px;
+  }
+  .imgEvent {
+    width: 100%;
+    height: 10em;
+}
+}
+@media only screen and (max-width: 270px) {
+  .menu-option {
+    color: rgb(255, 255, 255);
+    font-size: 12px;
+    font-weight: 400; 
+  } 
+  h1{
+    font-size: 25px;
+  }
+  .logoWolap {
+    width: 2.5em;
+  }
 }
