--- a/src/public/css/menu-options.css
+++ b/src/public/css/menu-options.css
@@ -88,25 +88,44 @@
     align-items: center;
     justify-content: space-between;
     top: 0;
-}
-.menu-options {
-  margin-top: 44px;
-  margin-bottom: 0;
-  display: flex;
-  justify-content: space-around;
-  padding: 5px 0;
-  background-color: #a2a8ac;
- }
-  body {
-    margin-top: 80px;
   }
-  h3{
-    font-size: 20px;
+  h6{
+    font-size: 15px;
   }
-  .imgEvent {
+  .menu-options {
+    margin-top: 44px;
+    margin-bottom: 0;
+    display: flex;
+    justify-content: space-around;
+    padding: 5px 0;
+    background-color: #a2a8ac;
+  }
+    body {
+      margin-top:78px;
+    }
+    h3{
+      font-size: 20px;
+    }
+    .imgEvent {
+      width: 100%;
+      height: 10em;
+  }
+  h6 {
+    font-size: 11px;
+    text-align: left;
+    font-family: sans-serif;
+  }
+  .carousel-item > img {
+    height: 10em !important;
+  }
+  .img-article {
     width: 100%;
-    height: 10em;
-}
+    height: 30vh !important;
+    cursor: pointer;
+  }
+  .d-md-block{
+    top: 10px;
+  }
 }
 @media only screen and (max-width: 270px) {
   .menu-option {
