--- a/src/views/events.pug
+++ b/src/views/events.pug
@@ -18,9 +18,8 @@ block container
                     .col-12.col-sm-12.col-md-12.col-lg-12
                         img.imgEvent(src="./images/events/lora-iota.jpg", alt="img1", data-toggle="modal", data-target="#iota-lora")
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
-                        span Itil Foundation - Preparación
+                        span LORA e IOTA: tecnologías abiertas para las Smart Cities 4.0
                         span Jueves 22 de marzo (19:00 a 21:00)
-                        span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
@@ -28,7 +27,6 @@ block container
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
                         span Dom 25/Feb/18 - 4pm
-                        span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
@@ -36,7 +34,6 @@ block container
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
                         span Dom 25/Feb/18 - 4pm
-                        span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
@@ -44,7 +41,6 @@ block container
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
                         span Dom 25/Feb/18 - 4pm
-                        span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
@@ -52,7 +48,6 @@ block container
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
                         span Dom 25/Feb/18 - 4pm
-                        span Aforo: 10
         .row.justify-content-sm-center
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
@@ -61,7 +56,6 @@ block container
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
                         span Dom 25/Feb/18 - 4pm
-                        span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
@@ -69,7 +63,6 @@ block container
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
                         span Dom 25/Feb/18 - 4pm
-                        span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
@@ -77,7 +70,6 @@ block container
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
                         span Dom 25/Feb/18 - 4pm
-                        span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
@@ -85,23 +77,20 @@ block container
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
                         span Dom 25/Feb/18 - 4pm
-                        span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
-                        img.imgEvent(src="./images/events/Constructora-exito.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
+                        img.imgEvent(src="./images/events/cdg-lima.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
                         span Dom 25/Feb/18 - 4pm
-                        span Aforo: 10
             .col-12.col-sm-5.col-md-5.col-lg-3#carEvent
                 .row.no-gutters
                     .col-12.col-sm-12.col-md-12.col-lg-12
-                        img.imgEvent(src="./images/events/IV-encuentro-Investigacion.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
+                        img.imgEvent(src="./images/events/wit-marzo-meetup.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
                     .col-12.col-sm-12.col-md-12.col-lg-12.informationCardsEvents
                         span Itil Foundation - Preparación
                         span Dom 25/Feb/18 - 4pm
-                        span Aforo: 10
 
     .modal.fade(id="arduino", tabindex="-1", role="dialog", aria-labelledby="exampleModalLabel", aria-hidden="true")
       .modal-dialog(role="document")
@@ -117,10 +106,10 @@ block container
                             img.img-fluid(src="./images/events/Arduino-Day.jpg", alt="img1")
                     .row
                         i.material-icons#iconBlack event
-                        p#informationEvent Sab 07/Abril/18 - 
+                        p#informationEvent sábado, 7 de abril
                     .row
                         i.material-icons#iconBlack watch_later
-                        p#informationEvent ( 9am-17:00 )
+                        p#informationEvent ( 9:00 a 17:00 )
                     .row
                         i.material-icons#iconBlack attach_money
                         p#informationEvent Gratis
@@ -130,15 +119,10 @@ block container
                     .row
                         .col-12
                             ol 
-                                li.text-justify Este 22 de marzo se realizará la conferencia “LORA e IOTA: tecnologías abiertas para el              desarrollo de Smart Cities e Industria 4.0” gracias al Núcleo de Investigación e Innovación Tecnológica (NIIT)    de   Internet de las Cosas de la Universidad Nacional Mayor de San Marcos. 
-                                li El grupo está dirigido por el profesor Jorge Guerra.
-                                li Inscripciones ➡ https://goo.gl/CWbi3V
+                                li.text-justify Evento mundial que celebra el desarrollo de soluciones tecnologicas en Open Hardware. La tecnologia Arduino es la lider indiscutible en implementar aplicaciones Hardware y Software. En el Peru la sede del evento mundial es la Universidad Nacional Mayor de San Marcos y esa organizado por el grupo de investigacion de Internet de las Cosas.   
                                 li Ingreso gratuito, capacidad limitada.
-                                li Programa de actividades : 
-                                    a(href="https://www.facebook.com/events/1529278423849405/") https://www.facebook.com/events/1529278423849405/
-                    .row
-                        .col-12
-                        #map.text-center
+                                li 
+                                    a(href="https://goo.gl/forms/zAOOE2GeMtZPWnrf1") https://goo.gl/forms/zAOOE2GeMtZPWnrf1https://www.facebook.com/events/1529278423849405/
             .modal-footer
                 button.btn.btn-secondary(type="button",data-dismiss="modal") Close
 
@@ -146,39 +130,71 @@ block container
         .modal-dialog(role="document")
             .modal-content
                 .modal-header
-                    h5.modal-title(id="exampleModalLabel") Arduino Day 2018
+                    h5.modal-title(id="exampleModalLabel") LORA e IOTA: tecnologías abiertas para las Smart Cities 4.0
                     button.close(type="button",data-dismiss="modal", aria-label="Close")
                     span(aria-hidden="true") &times;
                 .modal-body
                     .container-fluid
                         .row
                             .col-12
-                                img.img-fluid(src="./images/events/Arduino-Day.jpg", alt="img1")
+                                img.img-fluid(src="./images/events/lora-iota.jpg", alt="img1")
                         .row
                             i.material-icons#iconBlack event
-                            p#informationEvent Sab 07/Abril/18 - 
+                            p#informationEvent Jueves 22 de marzo  
                         .row
                             i.material-icons#iconBlack watch_later
-                            p#informationEvent ( 9am-17:00 )
+                            p#informationEvent (19:00 a 21:00)
                         .row
                             i.material-icons#iconBlack attach_money
                             p#informationEvent Gratis
                         .row
                             i.material-icons#iconBlack pin_drop
-                            p#informationEvent Auditorio Rosa Alarco Larrabure - UNMSM
+                            p#informationEvent Cultura en San Isidro, Calle La Republica 455, Lima 27 Lima
                         .row
                             .col-12
                                 ol 
                                     li.text-justify Este 22 de marzo se realizará la conferencia “LORA e IOTA: tecnologías abiertas para el              desarrollo de Smart Cities e Industria 4.0” gracias al Núcleo de Investigación e Innovación Tecnológica (NIIT)    de   Internet de las Cosas de la Universidad Nacional Mayor de San Marcos. 
                                     li El grupo está dirigido por el profesor Jorge Guerra.
-                                    li Inscripciones ➡ https://goo.gl/CWbi3V
+                                    li Inscripciones ➡ 
+                                        a(href="https://goo.gl/CWbi3V") https://goo.gl/CWbi3V
+                                        
                                     li Ingreso gratuito, capacidad limitada.
                                     li Programa de actividades : 
-                                        a(href="https://www.facebook.com/events/1529278423849405/") https://www.facebook.com/events/1529278423849405/
-                        .row
-                            .col-12
-                            #map.text-center
-                .modal-footer
+                                        a(href="https://www.facebook.com/events/1209571855840436/") https://www.facebook.com/events/1209571855840436/
                     button.btn.btn-secondary(type="button",data-dismiss="modal") Close
+    
+    .modal.fade(id="herramientas-marketing", tabindex="-1", role="dialog", aria-labelledby="exampleModalLabel", aria-hidden="true")
+      .modal-dialog(role="document")
+        .modal-content
+            .modal-header
+                h5.modal-title(id="exampleModalLabel") Taller Herramientas de Marketing para la Innovación
+                button.close(type="button",data-dismiss="modal", aria-label="Close")
+                span(aria-hidden="true") &times;
+            .modal-body
+                .container-fluid
+                    .row
+                        .col-12
+                            img.img-fluid(src="./images/events/Herramientas-Marketing.jpg", alt="img1")
+                    .row
+                        i.material-icons#iconBlack event
+                        p#informationEvent sábado, 7 de abril
+                    .row
+                        i.material-icons#iconBlack watch_later
+                        p#informationEvent ( 9:00 a 17:00 )
+                    .row
+                        i.material-icons#iconBlack attach_money
+                        p#informationEvent Gratis
+                    .row
+                        i.material-icons#iconBlack pin_drop
+                        p#informationEvent Auditorio Rosa Alarco Larrabure - UNMSM
+                    .row
+                        .col-12
+                            ol 
+                                li.text-justify Evento mundial que celebra el desarrollo de soluciones tecnologicas en Open Hardware. La tecnologia Arduino es la lider indiscutible en implementar aplicaciones Hardware y Software. En el Peru la sede del evento mundial es la Universidad Nacional Mayor de San Marcos y esa organizado por el grupo de investigacion de Internet de las Cosas.   
+                                li Ingreso gratuito, capacidad limitada.
+                                li 
+                                    a(href="https://goo.gl/forms/zAOOE2GeMtZPWnrf1") https://goo.gl/forms/zAOOE2GeMtZPWnrf1https://www.facebook.com/events/1529278423849405/
+            .modal-footer
+                button.btn.btn-secondary(type="button",data-dismiss="modal") Close
 
             
