--- a/src/views/layouts/header.pug
+++ b/src/views/layouts/header.pug
@@ -26,7 +26,7 @@ html(lang="en")
     header.fixed-top
       a(href="../../../index.html")
         img(src="images/koala.png", alt="koala").logoWolap
-      a(href="../../../index.htmlindex.html")
+      a(href="../../../index.html")
         h1.logo WOLAPP
       ul
         a.menu-option(href="events.html") Eventos
