time of carousel

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -11,6 +11,7 @@ block container
             li.active(data-target="#carouselExampleIndicators", data-slide-to="0")
             li(data-target="#carouselExampleIndicators", data-slide-to="1")
             li(data-target="#carouselExampleIndicators", data-slide-to="2")
+            li(data-target="#carouselExampleIndicators", data-slide-to="3")
 
           .carousel-inner
             .carousel-item.active
