--- a/src/views/layouts/header.pug
+++ b/src/views/layouts/header.pug
@@ -48,7 +48,7 @@ html(lang="en")
     
 
     footer.row
-      span.mx-auto Todos los derechos reservados FindUs
+      span.mx-auto © Copyright 2018  Brenda Mesias Villar. Todos los derechos reservados.
     
     
        
