--- a/src/public/css/footer.css
+++ b/src/public/css/footer.css
@@ -5,8 +5,10 @@ footer{
     margin-top: 0em;
     display: flex !important;
     align-items: center;
+    padding: 0 1em;
 }
 footer > span{
     margin-top: 0.5em;
     margin-bottom: 0.5em;
+    font-size: 12px;
 }
