--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -1,7 +1,7 @@
 header {
   width: 100%;
   height: 60px;
-  background-color: #0881ba;
+  background-color: #266ca2;
   padding: 0 4px;
   padding-right: 0;
   margin-right: 0;
