--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -15,13 +15,15 @@ block container
 
           .carousel-inner
             .carousel-item.active
-              img.d-block.w-100(src="./src/public/images/events/design-thinking.jpg", alt="First slide")
-              .carousel-caption.d-none.d-md-block
-                h3 hola mundo
+              img.d-block.w-100(src="./src/public/images/students.jpg", alt="First slide")
+              .carousel-caption.d-md-block
+                h6 Conoce los eventos academicos que te ayudarán a crecer profesionalmente, en ellos adquiere las habilidades que necesitas para ser un profesional competitivo en el mercado.
             .carousel-item
               img.d-block.w-100(src="./src/public/images/events/taller-marketing.jpg", alt="Second slide")
             .carousel-item
               img.d-block.w-100(src="./src/public/images/events/lora-iota.jpg", alt="Third slide")
+            .carousel-item
+              img.d-block.w-100(src="./src/public/images/events/cdg-lima.jpg", alt="fourth slide")
           
           a.carousel-control-prev(href="#carouselExampleIndicators", role="button", data-slide="prev")
             span.carousel-control-prev-icon(aria-hidden="true")
@@ -32,10 +34,108 @@ block container
             span.sr-only Next
       .col-12.col-sm-6.col-md-3
         .row
-          img.img-article(src="./src/public/images/events/Arduino-Day.jpg", alt="img1", data-toggle="modal", data-target="#exampleModal")
+          img.img-article(src="./src/public/images/events/Arduino-Day.jpg", alt="img1", data-toggle="modal", data-target="#arduino")
         .row
-          img.img-article(src="./src/public/images/events/conegp.jpg", alt="img1")
+          img.img-article(src="./src/public/images/events/conegp.jpg",, data-toggle="modal", data-target="#conegp")
         .row
-          img.img-article(src="./src/public/images/events/ideas-estudios-mercado.jpg", alt="img1")
-  
-      
+          img.img-article(src="./src/public/images/events/ideas-estudios-mercado.jpg",, data-toggle="modal", data-target="#ideas-estudios-mercado")
+
+  .modal.fade(id="arduino", tabindex="-1", role="dialog", aria-labelledby="exampleModalLabel", aria-hidden="true")
+      .modal-dialog(role="document")
+        .modal-content
+            .modal-header
+                h5.modal-title(id="exampleModalLabel") Arduino Day 2018
+                button.close(type="button",data-dismiss="modal", aria-label="Close")
+                span(aria-hidden="true") &times;
+            .modal-body
+                .container-fluid
+                    .row
+                        .col-12
+                            img.img-fluid(src="./src/public/images/events/Arduino-Day.jpg", alt="img1")
+                    .row
+                        i.material-icons#iconBlack event
+                        p#informationEvent sábado, 7 de abril
+                    .row
+                        i.material-icons#iconBlack watch_later
+                        p#informationEvent ( 9:00 a 17:00 )
+                    .row
+                        i.material-icons#iconBlack attach_money
+                        p#informationEvent Gratis
+                    .row
+                        i.material-icons#iconBlack pin_drop
+                        p#informationEvent Auditorio Rosa Alarco Larrabure - UNMSM
+                    .row
+                        .col-12
+                            ol 
+                                li.text-justify Evento mundial que celebra el desarrollo de soluciones tecnologicas en Open Hardware. La tecnologia Arduino es la lider indiscutible en implementar aplicaciones Hardware y Software. En el Peru la sede del evento mundial es la Universidad Nacional Mayor de San Marcos y esa organizado por el grupo de investigacion de Internet de las Cosas.   
+                                li Ingreso gratuito, capacidad limitada.
+                                li 
+                                    a(href="https://goo.gl/forms/zAOOE2GeMtZPWnrf1") https://goo.gl/forms/zAOOE2GeMtZPWnrf1https://www.facebook.com/events/1529278423849405/
+            .modal-footer
+                button.btn.btn-secondary(type="button",data-dismiss="modal") Close
+        
+  .modal.fade(id="conegp", tabindex="-1", role="dialog", aria-labelledby="exampleModalLabel", aria-hidden="true")
+      .modal-dialog(role="document")
+        .modal-content
+            .modal-header
+                h5.modal-title(id="exampleModalLabel") Congreso Nacional Estudiantil de Gestión de Proyectos (CONEGP)
+                button.close(type="button",data-dismiss="modal", aria-label="Close")
+                span(aria-hidden="true") &times;
+            .modal-body
+                .container-fluid
+                    .row
+                        .col-12
+                            img.img-fluid(src="./src/public/images/events/conegp.jpg", alt="img1")
+                    .row
+                        i.material-icons#iconBlack event
+                        p#informationEvent  15 - 18 de agosto
+                    .row
+                        i.material-icons#iconBlack watch_later
+                        p#informationEvent  9:00 (15 de agosto) - 21:00 (18 de agosto) 
+                    .row
+                        i.material-icons#iconBlack attach_money
+                        p#informationEvent Gratis
+                    .row
+                        i.material-icons#iconBlack pin_drop
+                        p#informationEvent Avenida Juan Pablo II 306, 07011 Bellavista, Perú
+                    .row
+                        .col-12
+                            ol 
+                                li.text-justify Somos un equipo de estudiantes que promueve el desarrollo del CONEGP; un evento académico importante que brinda herramientas, habilidades blandas y el uso de la tecnología como brazo estratégico en la formación integral de la Dirección de Proyectos.   
+                                li Ingreso gratuito.
+                                li 
+                                    a(href="https://www.facebook.com/events/1860995150577735/")  https://www.facebook.com/events/1860995150577735/
+            .modal-footer
+                button.btn.btn-secondary(type="button",data-dismiss="modal") Close
+  .modal.fade(id="ideas-estudios-mercado", tabindex="-1", role="dialog", aria-labelledby="exampleModalLabel", aria-hidden="true")
+        .modal-dialog(role="document")
+            .modal-content
+                .modal-header
+                    h5.modal-title(id="exampleModalLabel") Ideas y Estudio de Mercado
+                    button.close(type="button",data-dismiss="modal", aria-label="Close")
+                    span(aria-hidden="true") &times;
+                .modal-body
+                    .container-fluid
+                        .row
+                            .col-12
+                                img.img-fluid(src="./src/public/images/events/ideas-estudios-mercado.jpg", alt="img1")
+                        .row
+                            i.material-icons#iconBlack event
+                            p#informationEvent 4 y 7 de Abril
+                        .row
+                            i.material-icons#iconBlack watch_later
+                            p#informationEvent 04 de Abril ( 7:00 p.m. - 10:00 p.m.) /07 de Abril ( 10:00 a.m. - 2:00 p.m.)
+                        .row
+                            i.material-icons#iconBlack attach_money
+                            p#informationEvent Gratis
+                        .row
+                            i.material-icons#iconBlack pin_drop
+                            p#informationEvent Av Javier Prado este 3502, piso 1 - San Borja
+                        .row
+                            .col-12
+                                ol 
+                                    li.text-justify Esta semana te invitamos a matricularte en un nuevo inicio de nuestro CURSO INTEGRAL MIEMPRESAPROPIA, que por más de 12 años ha capacitado a más de 6,700 nuevos emprendedores.
+                                    li  Capacidad limitada. 
+                                        a(href="https://www.facebook.com/events/2073558702900792/")  https://www.facebook.com/events/2073558702900792/   
+                .modal-footer
+                    button.btn.btn-secondary(type="button",data-dismiss="modal") Close 
